# mandelbrot2

./: Cargo.toml  README.md
benches/: trace_bench.rs
src/: complex.rs  config.rs  lib.rs  lut.rs  main.rs  render.rs
